--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akin Gültekin</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/intro.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
@@ -12,251 +12,13 @@
 </head>
 <body>
 
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center">
-        <h1 class="title">NAVIGATE</h1>
-    </div>
-
-    <section class="main-section d-flex h-75 justify-content-center">
-
-        <div class="me d-flex align-items-center justify-content-center">   
-            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="me-text"> ME </h1>
-            </button> 
-        </div>
-
-        <div class="skills d-flex align-items-center justify-content-center">   
-            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="skills-text"> SKILLS </h1>
-            </button> 
-        </div>
-
-        <div class="projects d-flex align-items-center justify-content-center">   
-            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="projects-text"> PROJECTS </h1>
-            </button> 
-        </div>
-
-        <div class="contact d-flex align-items-center justify-content-center"> 
-            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="contact-text"> CONTACT </h1>
-            </button> 
-        </div>
-
+    <section class="intro-section d-flex h-100 justify-content-center align-items-center">
+        <h1 class="text-white">
+            <span class="firstname">AKIN</span> <span class="lastname">GULTEKIN</span> 
+        </h1>
     </section>
-
-    <div class="containerd-flex h-25"></div>
-
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="me">
-        <h1 class="title">ME</h1>
-    </div>
-
-    <section class="me-section d-flex justify-content-center">
-
-        <div class="row">
-            <div class="col-md"></div>
-            <div class="col-md-4">
-                <h1 class="about-text text-white">
-                    Hi. My name is Akin Gultekin and I am 17. I am a lazy guy who likes computers.
-                </h1>
-            </div>
-            <div class="col-md-4">
-                <img class="img-fluid" src="/img/me.png">
-            </div>
-            <div class="col-md">
-            </div>
-        </div>
-
-    </section>
-
-    <div class="containerd-flex h-25"></div>
-
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="skills">
-        <h1 class="title">SKILLS</h1>
-    </div>
     
-    <section class="skills-section d-flex h-75 justify-content-center">
+    <script src="/js/intro.js"></script>
 
-        <div class="row">
-            <div class="col-md">
-                <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/html.png">
-                    <div class="card-body text-white text-center">
-                        <h1 class="html-text">HTML</h1>
-                        <div class="progress" style="height: 5vh">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;"
-                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                <h1 class="m-1">I KNOW THIS</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/css.png">
-                    <div class="card-body text-white text-center">
-                        <h1 class="css-text">CSS</h1>
-                        <div class="progress" style="height: 5vh">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;"
-                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                <h1 class="m-1">A LOT OF KNOWLEDGE</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/js.png">
-                    <div class="card-body text-white text-center">
-                        <h1 class="js-text">JS</h1>
-                        <div class="progress" style="height: 5vh">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%;"
-                                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                <h1 class="m-1">I'M AVERAGE AT IT</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-    <div class="containerd-flex h-25"></div>
-
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="projects">
-        <h1 class="title">PROJECTS</h1>
-    </div>
-
-    <section class="projects-section d-flex justify-content-center">
-
-        <div class="row row-cols row-cols-md-2 g-0">
-            <div class="col-md">
-              <div class="card bg-transparent">
-                <img src="/img/projects/higherlower.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
-                <div class="card-body text-white text-center">
-                  <h1 class="project-title">HIGHER OR LOWER</h1>
-                  <p class="project-text">
-                    A DICE GAME WHERE GUESS BETWEEN HIGHER AND LOWER ON HOW MUCH YOUR OPPONENT
-                    HAS THROWN. <br>
-                    YOU TAKE TURNS UNTIL ONE HAS SCORED 5 POINTS AND WINS!
-                  </p>
-                  <button class="project-button higherlower-button">
-                    <h1>GO TO GITHUB PAGE</h1>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md">
-                <div class="card bg-transparent">
-                  <img src="/img/projects/escaperoom.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
-                  <div class="card-body text-white text-center">
-                    <h1 class="project-title">ESCAPE ROOM</h1>
-                    <p class="project-text">
-                        A HORROR ESCAPE ROOM GAME WHERE YOU TRY TO SOLVE <br>
-                        PUZZLES TO UNLOCK NEW ROOMS AND ESCAPE FROM THE BUILDING.
-                    </p>
-                    <button class="project-button escaperoom-button">
-                        <h1>GO TO GITHUB PAGE</h1>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md">
-                <div class="card bg-transparent">
-                  <img src="/img/projects/tictactoe.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
-                  <div class="card-body text-white text-center">
-                    <h1 class="project-title">TIC TAC TOE</h1>
-                    <p class="project-text">
-                        A TIC TAC TOE GAME WHERE I MADE MY OWN AI TO GO AGAINST <br>
-                        AND GAVE IT AN AESTHETIC LOOK TO IT.
-                    </p>
-                    <button class="project-button tictactoe-button">
-                        <h1>GO TO GITHUB PAGE</h1>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md">
-                <div class="card bg-transparent">
-                  <img src="/img/projects/windows10.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
-                  <div class="card-body text-white text-center">
-                    <h1 class="project-title">WINDOWS 10</h1>
-                    <p class="project-text">
-                        I MADE WINDOWS 10 IN HTML. THIS ACTS LIKE THE SAME AS WINDOWS 10, <br>
-                        BUT IT HAS LESS THINGS AND IT'S WAY FASTER.
-                    </p>
-                    <button class="project-button windows10-button">
-                        <h1>GO TO GITHUB PAGE</h1>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md">
-                <div class="card bg-transparent">
-                  <img src="/img/projects/webcatalogus.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
-                  <div class="card-body text-white text-center">
-                    <h1 class="project-title">WEBCATALOG</h1>
-                    <p class="project-text">
-                        MY PAGE OF A FORMULA 1 SITE ABOUT READING INFORMATION OF CARS. 
-                    </p>
-                    <button class="project-button webcatalog-button">
-                        <h1>GO TO GITHUB PAGE</h1>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md">
-                <div class="card bg-transparent">
-                  <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
-                  <div class="card-body text-white text-center">
-                    <h1 class="project-title">DASHBOARD</h1>
-                    <p class="project-text">
-                        MY DASHBOARD PAGE OF POKEMONS WHERE YOU CAN SEE <br>
-                        HOW MANY STATS EACH POKEMON HAS. 
-                    </p>
-                    <button class="project-button dashboard-button">
-                        <h1>GO TO GITHUB PAGE</h1>
-                    </button>
-                  </div>
-                </div>
-              </div>
-          </div>
-          
-    </section>
-
-    <div class="containerd-flex h-25"></div>
-
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="contact">
-        <h1 class="title">CONTACT</h1>
-    </div>
-
-    <section class="contact-section d-flex h-75 justify-content-center">
-        <div class="row">
-            <div class="col-md"></div>
-            <div class="discord col-md">
-                <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid text-center" src="/img/discord.png">
-                    <div class="card-body text-white text-center">
-                        <h1 class="discord-title">DISCORD</h1>
-                        <p class="discord-text">Azzet#9246</p>
-                    </div>
-                </div>
-            </div>
-            <div class="instagram col-md">
-                <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/instagram.png">
-                    <div class="card-body text-white text-center">
-                        <h1 class="discord-title">INSTAGRAM</h1>
-                        <p class="discord-text">@akgultekin58</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md"></div>
-        </div>
-    </section>
-
-<script src="/js/main.js"></script>
 </body>
 </html>
