--- a/main.html
+++ b/main.html
@@ -56,19 +56,36 @@
             <div class="col-md"></div>
             <div class="col-md-4">
                 <h1 class="about-text text-white">
-                    Hi. My name is Akin Gultekin and I am 17. I am a lazy guy who likes computers.
+                    Hi. My name is Akin Gultekin and I am 18. I am a lazy guy who likes computers.
                 </h1>
             </div>
             <div class="col-md-4">
                 <img class="img-fluid" src="/img/me.png">
             </div>
-            <div class="col-md">
+            <div class="col-md"></div>
+        </div>
+
+    </section>
+
+    <div class="container d-flex h-25"></div>
+
+    <section class="cv-section d-flex justify-content-center">
+
+        <div class="row">
+            <div class="col-md"></div>
+            <div class="col-md-4">
+                <h1 class="cv-text text-white">
+                    MY CV
+                </h1>
+            </div>
+            <div class="col-md-4">
+                <button>DOWNLOAD</button>
             </div>
         </div>
 
     </section>
 
-    <div class="containerd-flex h-25"></div>
+    <div class="container d-flex h-25"></div>
 
     <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="skills">
         <h1 class="title">SKILLS</h1>
