--- a/main.html
+++ b/main.html
@@ -52,8 +52,7 @@
 
     <section class="me-section d-flex justify-content-center">
 
-        <div class="row">
-            <div class="col-md"></div>
+        <div class="row justify-content-center">
             <div class="col-md-4">
                 <h1 class="about-text text-white">
                     Hi. My name is Akin Gultekin and I am 18. I am a lazy guy who likes computers.
@@ -62,7 +61,6 @@
             <div class="col-md-4">
                 <img class="img-fluid" src="/img/me.png">
             </div>
-            <div class="col-md"></div>
         </div>
 
     </section>
@@ -71,15 +69,16 @@
 
     <section class="cv-section d-flex justify-content-center">
 
-        <div class="row">
-            <div class="col-md"></div>
-            <div class="col-md-4">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
                 <h1 class="cv-text text-white">
                     MY CV
                 </h1>
             </div>
-            <div class="col-md-4">
-                <button>DOWNLOAD</button>
+            <div class="col-md-5">
+                <a href="cv.png" download>
+                    <h1>DOWNLOAD</h1>
+                </a>
             </div>
         </div>
 
@@ -100,9 +99,8 @@
                     <div class="card-body text-white text-center">
                         <h1 class="html-text">HTML</h1>
                         <div class="progress" style="height: 5vh">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;"
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90%;"
                                 aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                <h1 class="m-1">I KNOW THIS</h1>
                             </div>
                         </div>
                     </div>
@@ -114,9 +112,8 @@
                     <div class="card-body text-white text-center">
                         <h1 class="css-text">CSS</h1>
                         <div class="progress" style="height: 5vh">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;"
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: 90%;"
                                 aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                <h1 class="m-1">A LOT OF KNOWLEDGE</h1>
                             </div>
                         </div>
                     </div>
@@ -128,9 +125,21 @@
                     <div class="card-body text-white text-center">
                         <h1 class="js-text">JS</h1>
                         <div class="progress" style="height: 5vh">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%;"
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 50%;"
                                 aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                <h1 class="m-1">I'M AVERAGE AT IT</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card bg-transparent">
+                    <img class="card-img-top img-fluid" src="/img/php.png">
+                    <div class="card-body text-white text-center">
+                        <h1 class="php-text">PHP</h1>
+                        <div class="progress" style="height: 5vh">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary" role="progressbar" style="width: 70%;"
+                                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                             </div>
                         </div>
                     </div>
@@ -250,6 +259,38 @@
                   </div>
                 </div>
               </div>
+              <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
+                  <div class="card-body text-white text-center">
+                    <h1 class="project-title">ZUZU</h1>
+                    <p class="project-text">
+                        ONE OF MY WEBSITE WHERE YOU CAN ORDER SUSHI FROM. 
+                    </p>
+                    <a href="https://github.com/ROCMondriaanTIN/sd22-p5-projectzuzu-akgultekin.git">
+                        <button class="project-button">
+                            <h1>GO TO GITHUB PAGE</h1>
+                        </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
+                  <div class="card-body text-white text-center">
+                    <h1 class="project-title">SOPRANOS</h1>
+                    <p class="project-text">
+                        ONE OF MY WEBSITE WHERE YOU CAN ORDER PIZZA FROM. 
+                    </p>
+                    <a href="https://github.com/akgultekin/sd22-p07-php-symfony1-akgultekin.git">
+                        <button class="project-button">
+                            <h1>GO TO GITHUB PAGE</h1>
+                        </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
           </div>
           
     </section>
@@ -268,7 +309,7 @@
                     <img class="card-img-top img-fluid text-center" src="/img/discord.png">
                     <div class="card-body text-white text-center">
                         <h1 class="discord-title">DISCORD</h1>
-                        <p class="discord-text">Azzet#9246</p>
+                        <p class="discord-text">azzetguy</p>
                     </div>
                 </div>
             </div>
