--- a/main.html
+++ b/main.html
@@ -163,10 +163,6 @@
                 <img src="/img/projects/higherlower.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                 <div class="card-body text-white text-center">
                   <h1 class="project-title">HIGHER OR LOWER</h1>
-                  <p class="project-text">
-                    A DICE GAME WHERE GUESS BETWEEN HIGHER AND LOWER ON HOW MUCH YOUR OPPONENT
-                    HAS THROWN. <br>
-                  </p>
                   <a href="https://github.com/akgultekin/higherlower.git">
                     <button class="project-button">
                         <h1>GO TO GITHUB PAGE</h1>
@@ -180,10 +176,6 @@
                   <img src="/img/projects/escaperoom.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">ESCAPE ROOM</h1>
-                    <p class="project-text">
-                        A HORROR ESCAPE ROOM GAME WHERE YOU TRY TO SOLVE <br>
-                        PUZZLES TO UNLOCK NEW ROOMS AND ESCAPE FROM THE BUILDING.
-                    </p>
                     <a href="https://github.com/akgultekin/escaperoom.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
@@ -197,10 +189,6 @@
                   <img src="/img/projects/tictactoe.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">TIC TAC TOE</h1>
-                    <p class="project-text">
-                        A TIC TAC TOE GAME WHERE I MADE MY OWN AI TO GO AGAINST <br>
-                        AND GAVE IT AN AESTHETIC LOOK TO IT.
-                    </p>
                     <a href="https://github.com/ROCMondriaanTIN/sd22-git-p1-git-basis-akgultekin.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
@@ -214,10 +202,6 @@
                   <img src="/img/projects/windows10.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">WINDOWS 10</h1>
-                    <p class="project-text">
-                        I MADE WINDOWS 10 IN HTML. THIS ACTS LIKE THE SAME AS WINDOWS 10, <br>
-                        BUT IT HAS LESS THINGS AND IT'S WAY FASTER.
-                    </p>
                     <a href="https://github.com/ROCMondriaanTIN/sd22-themaweek-2-t1k-akgultekin.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
@@ -231,9 +215,6 @@
                   <img src="/img/projects/webcatalogus.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">WEBCATALOG</h1>
-                    <p class="project-text">
-                        MY PAGE OF A FORMULA 1 SITE ABOUT READING INFORMATION OF CARS. 
-                    </p>
                     <a href="https://github.com/ROCMondriaanTIN/sd22-p03-project-webcatalogus-t1k-tech-makelaar.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
@@ -247,10 +228,6 @@
                   <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">DASHBOARD</h1>
-                    <p class="project-text">
-                        MY DASHBOARD PAGE OF POKEMONS WHERE YOU CAN SEE <br>
-                        HOW MANY STATS EACH POKEMON HAS. 
-                    </p>
                     <a href="https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-hella-cash-gang-1.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
@@ -261,12 +238,9 @@
               </div>
               <div class="col-md">
                 <div class="card bg-transparent">
-                  <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
+                  <img src="/img/projects/zuzu.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">ZUZU</h1>
-                    <p class="project-text">
-                        ONE OF MY WEBSITE WHERE YOU CAN ORDER SUSHI FROM. 
-                    </p>
                     <a href="https://github.com/ROCMondriaanTIN/sd22-p5-projectzuzu-akgultekin.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
@@ -277,12 +251,9 @@
               </div>
               <div class="col-md">
                 <div class="card bg-transparent">
-                  <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
+                  <img src="/img/projects/sopranos.png" class="card-img-top img-fluid rounded-0" style="height: 50vh;">
                   <div class="card-body text-white text-center">
                     <h1 class="project-title">SOPRANOS</h1>
-                    <p class="project-text">
-                        ONE OF MY WEBSITE WHERE YOU CAN ORDER PIZZA FROM. 
-                    </p>
                     <a href="https://github.com/akgultekin/sd22-p07-php-symfony1-akgultekin.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
