--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <h1 class="about-text text-white">
-                    Hi. My name is Akin Gultekin and I am 18. I am a lazy guy who likes computers.
+                    Hi. My name is Akin Gultekin and I am 18. I am a chill guy who likes computers.
                 </h1>
             </div>
             <div class="col-md-4">
